# bcai

./: .gitignore  BLOCKCHAIN_INFRASTRUCTURE_SUMMARY.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  COMMUNITY_CHALLENGE.md  CONTRIBUTING.md  CRITICAL_FIXES_ROADMAP.md  Cargo.toml  DEEP_TECHNICAL_REVIEW.md  DELIVERY_STATUS.md  Dockerfile  GUIDING_PRINCIPLES.md  HONEST_GAP_ANALYSIS.md  HONEST_GAP_ANALYSIS_AI.md  IMPLEMENTATION_PLAN.md  LAUNCH_CHECKLIST.md  NEXT_STEPS.md  PHASE1_CRITICAL_FIXES_STATUS.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_HONEST_PLAN.md  PHASE3_COMPLETION_SUMMARY.md  POUW_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS.md  README.md  RELEASE.md  RFC.md  ROADMAP.md  SETUP.md  STUB_REMOVAL_PROGRESS.md  TESTNET_TUTORIAL.md  WHITEPAPER.md  bcai-cli.rs  docker-compose.yml  ledger.json  phase3_enterprise_demo.rs  pouw.md  public_key.json
.cargo/: config.toml
dashboard/: Cargo.toml
dashboard/src/: lib.rs  main.rs
devnet/: Cargo.toml
devnet/examples/: devnet.rs
devnet/src/: app.rs  cli.rs  command_handler.rs  commands.rs  config.rs  daemon.rs  error.rs  init.rs  job.rs  lib.rs  main.rs  persistence.rs  training.rs
devnet/src/command_handler/: account.rs  core.rs  info.rs  job.rs  mine.rs  mod.rs  tx.rs
devnet/src/daemon/: mod.rs  types.rs
devnet/src/ledger/: actions.rs  mod.rs
devnet/src/ops/: job_ops.rs  ledger_ops.rs  mod.rs  system_ops.rs
devnet/tests/: basic.rs
jobmanager/: Cargo.toml
jobmanager/examples/: job_cycle.rs
jobmanager/src/: lib.rs  main.rs
jobmanager/tests/: integration.rs
keygen/: Cargo.toml
keygen/src/: lib.rs  main.rs
keygen/tests/: basic.rs
runtime/: Cargo.toml  README_ENHANCED_VM.md  mainnet_genesis.json  p2p_service.rs
runtime/benches/: tensor_operations.rs
runtime/examples/: advanced_governance_demo.rs  cross_chain_bridge_demo.rs  federated_3tb_llm_demo.rs  phase2_demo.rs  phase2_simple_demo.rs  phase2b_minimal_demo.rs  phase3_demo.rs  pre_deployment_checklist.rs  production_deploy.rs  timebound_permissions_simple_demo.rs
runtime/src/: advanced_governance.rs  blockchain.rs  consensus_engine.rs  consensus_node.rs  cross_chain_bridge.rs  decentralized_filesystem.rs  distributed_storage.rs  double.wgsl  enhanced_p2p_service.rs  enhanced_vm.rs  evaluator.rs  federated.rs  federated_network_coordinator.rs  gpu.rs  hardware_abstraction.rs  instruction.rs  job.rs  job_manager.rs  lib.rs  miner.rs  ml_instructions.rs  mnist.rs  monitoring.rs  network.rs  neural_network.rs  node.rs  p2p_security.rs  p2p_service.rs  performance_optimizer.rs  pouw.rs  python_bridge.rs  security.rs  security_layer.rs  smart_contracts.rs  tensor_ops.rs  token.rs  trainer.rs  vm.rs  wire.rs
runtime/src/blockchain/: account_manager.rs  block.rs  block_processor.rs  chain.rs  chain_ext.rs  config.rs  constants.rs  error.rs  genesis.rs  mod.rs  state.rs  transaction.rs  validation.rs
runtime/src/blockchain/transaction/: core.rs  hashing.rs  mod.rs  signing.rs
runtime/src/blockchain/validation/: block.rs  mod.rs  pow.rs  transaction.rs
runtime/src/consensus_engine/: engine.rs  messages.rs  mod.rs  state.rs
runtime/src/cross_chain_bridge/: chains.rs  config.rs  error.rs  external_chain.rs  liquidity.rs  messages.rs  mod.rs  transactions.rs  validators.rs
runtime/src/dfs/: contracts.rs  crypto.rs  mod.rs  permissions.rs  types.rs
runtime/src/distributed_storage/: allocation.rs  daemon.rs  mod.rs  replication.rs  reward.rs  storage.rs
runtime/src/federated/: aggregation.rs  learning.rs  mod.rs  model.rs
runtime/src/federated_network_coordinator/: config.rs  error.rs  job.rs  mod.rs
runtime/src/large_data_transfer/: cache.rs  chunk.rs  compression.rs  config.rs  crypto.rs  descriptor.rs  error.rs  manager.rs  merkle.rs  metadata.rs  mod.rs  network_integration.rs  pricing.rs  protocol.rs  redundancy.rs  types.rs  validator.rs
runtime/src/large_data_transfer/chunk/: data.rs  error.rs  id.rs  info.rs  mod.rs  stats.rs  tests.rs
runtime/src/large_data_transfer/chunk/data/: compression.rs  core.rs  mod.rs  verify.rs
runtime/src/large_data_transfer/config/: cache.rs  compression.rs  core.rs  encryption.rs  mod.rs  retry.rs
runtime/src/large_data_transfer/descriptor/: mod.rs
runtime/src/large_data_transfer/manager/: config.rs  entry.rs  eviction.rs  manager.rs  mod.rs  retrieval.rs  stats.rs  storage.rs  tests.rs
runtime/src/large_data_transfer/network/: bandwidth_manager.rs  coordinator.rs  error.rs  mod.rs  models.rs  peer_manager.rs  transfer_handler.rs
runtime/src/large_data_transfer/network/coordinator/: core.rs  loops.rs  mod.rs  stats.rs
runtime/src/large_data_transfer/network/models/: bandwidth.rs  message.rs  mod.rs  peer.rs  stats.rs
runtime/src/large_data_transfer/network/transfer_handler/: announce.rs  internal.rs  mod.rs  orchestrator.rs  process.rs  request.rs
runtime/src/large_data_transfer/protocol/: chunk_tracking.rs  error.rs  handler.rs  message.rs  mod.rs  peer_management.rs  progress_metrics.rs  session.rs  session_state.rs  state.rs  stats.rs  tests.rs
runtime/src/large_data_transfer/protocol/handler/: chunk_data.rs  chunk_request.rs  core.rs  maintenance.rs  mod.rs  transfer_request.rs
runtime/src/node/: capability_validator.rs  error.rs  execution_handler.rs  job_completion.rs  job_handler.rs  job_posting.rs  job_volunteering.rs  mod.rs  node.rs  stake_handler.rs  tests.rs  types.rs
runtime/src/p2p_service/: behaviour.rs  codec.rs  command.rs  config.rs  error.rs  mod.rs  service.rs  service_command.rs  service_event.rs  service_init.rs  tests.rs  types.rs
runtime/src/performance_optimizer/: error.rs  metrics.rs  mod.rs  optimizer.rs
runtime/src/pouw/: difficulty.rs  evaluation.rs  mod.rs  model.rs  outlier.rs  solver.rs  task.rs  tests.rs  types.rs  validator_selection.rs  verifier.rs
runtime/src/security_layer/: attestation.rs  config.rs  error.rs  firewall.rs  mod.rs
runtime/tests/: distributed_training_e2e.rs  genesis.rs  integration.rs  integration_test.rs  job_manager.rs  mnist.rs  pouw.rs  real_integration.rs  simple_integration.rs  stress.rs  token.rs  trainer_evaluator.rs  vm.rs
(+68 files in other folders)
