[workspace]
members = [
    "runtime",
    "devnet",
    "keygen",
    "jobmanager", 
    "dashboard",
    "p2p",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Shared dependencies across workspace
wgpu = "25"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"
smartcore = { version = "0.4", default-features = false, features = ["datasets"] }
rayon = "1"
chrono = { version = "0.4.41", features = ["serde"] }

# Main BCAI binary package
[package]
name = "bcai"
version = "0.1.0"
edition = "2021"

[lib]
name = "bcai"
path = "src/lib.rs"

[dependencies]
jobmanager = { path = "jobmanager" }
keygen = { path = "keygen" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Temporarily disabled problematic binaries
# [[bin]]
# name = "bcai"
# path = "bcai-cli.rs"

# [[bin]]
# name = "blockchain"
# path = "runtime/src/bin/blockchain.rs"
# doc = false 