[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "dashboard"
path = "src/lib.rs"

[[bin]]
name = "dashboard"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
devnet = { path = "../devnet" }
runtime = { path = "../runtime" }
thiserror = "1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
