[package]
name = "devnet"
version = "0.1.0"
edition = "2021"

[lib]
name = "devnet"
path = "src/lib.rs"

[[bin]]
name = "devnet"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
runtime = { path = "../runtime" }
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
