[package]
name = "devnet"
version = "0.1.0"
edition = "2021"

[lib]
name = "devnet"
path = "src/lib.rs"

# [[bin]]
# name = "devnet"
# path = "src/bin/devnet.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
runtime = { path = "../runtime" }
chrono = "0.4"
bincode = "1.3.3"
libc = "0.2"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
port_scanner = "0.1.5"
