[package]
name = "jobmanager"
version = "0.1.0"
edition = "2021"

[lib]
name = "jobmanager_lib"
path = "src/lib.rs"

[[bin]]
name = "jobmanager"
path = "src/bin/jobmanager.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
