[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

[lib]
name = "keygen_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "1"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
