[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

[lib]
name = "keygen_lib"
path = "src/lib.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "1"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
