[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

[lib]
name = "keygen_lib"
path = "src/lib.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
schnorrkel = "0.11.2"
hex = "0.4.3"
rand = "0.8.5"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
