[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "runtime"
path = "src/lib.rs"

[[bin]]
name = "runtime"
path = "src/bin/runtime.rs"

[[bin]] 
name = "vm_test_runner"
path = "src/bin/vm_test_runner.rs"

[[bin]]
name = "blockchain"
path = "src/bin/blockchain.rs"

[features]
default = []
enhanced-vm = ["pyo3", "tch", "candle-core"]
cuda = ["enhanced-vm"]
metal-gpu = ["enhanced-vm", "metal"]
pytorch = ["enhanced-vm"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

# Essential for blockchain
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Enhanced VM dependencies
num-complex = "0.4"
rayon = "1.7"
ndarray = "0.15"

# Optional ML dependencies
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }
tch = { version = "0.13", optional = true }
candle-core = { version = "0.3", optional = true }
metal = { version = "0.27", optional = true }

# Hardware abstraction
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }

# Large data transfer dependencies
lz4_flex = "0.11"
crc32fast = "1.3"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "vm_benchmarks"
# harness = false
