[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "runtime"
path = "src/lib.rs"

[[bin]]
name = "runtime"
path = "bin/runtime.rs"

# [[bin]]
# name = "vm_test_runner"
# path = "bin/vm_test_runner.rs"

# [[bin]]
# name = "production_deploy"
# path = "bin/production_deploy.rs"

# [[bin]]
# name = "pre_deployment_checklist"
# path = "bin/pre_deployment_checklist.rs"

# [[bin]]
# name = "blockchain"
# path = "bin/blockchain.rs"

# [[bin]]
# name = "federated_3tb_llm_demo"
# path = "bin/federated_3tb_llm_demo.rs"

# [[bin]]
# name = "decentralized_storage_demo"
# path = "bin/decentralized_storage_demo.rs"

# [[bin]]
# name = "permissions_demo"
# path = "bin/permissions_demo.rs"

# [[bin]]
# name = "timebound_permissions_demo"
# path = "bin/timebound_permissions_demo.rs"

# [[bin]]
# name = "timebound_permissions_simple_demo"
# path = "bin/timebound_permissions_simple_demo.rs"

# [[bin]]
# name = "cross_chain_bridge_demo"
# path = "bin/cross_chain_bridge_demo.rs"

# [[bin]]
# name = "advanced_governance_demo"
# path = "bin/advanced_governance_demo.rs"

[features]
default = []
enhanced-vm = ["pyo3", "tch", "candle-core"]
cuda = ["enhanced-vm"]
metal-gpu = ["enhanced-vm", "metal"]
pytorch = ["enhanced-vm"]

[dependencies]
# Core dependencies (always required)
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
anyhow = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.30"
log = "0.4.21"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.18"

# Essential for blockchain
sha2 = "0.10.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"  # Unified version to avoid conflicts
schnorrkel = { version = "0.11.2", features = ["getrandom", "serde"] }
blake3 = "1.3"
hex = "0.4.3"

# Enhanced VM dependencies
num-complex = "0.4"
rayon = "1.7"
ndarray = "0.15"

# Optional ML dependencies (only when feature enabled)
pyo3 = { version = "0.20", features = ["auto-initialize"], optional = true }
tch = { version = "0.13", optional = true }
candle-core = { version = "0.3", optional = true }
metal = { version = "0.27", optional = true }

# Hardware abstraction
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }

# Large data transfer dependencies
lz4_flex = "0.11"
crc32fast = "1.3"

# Phase 2: Network Protocol Enhancement dependencies
bytes = "1.5.0"
dashmap = "5.5"
tokio-util = { version = "0.7", features = ["codec"] }

# New dependencies
lz4 = "1.24"
flate2 = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"
ed25519-dalek = "2.1"
prost = "0.12.3"
toml = "0.8.12"
thiserror-impl = "1.0.58"

# P2P networking layer dependencies
libp2p = { version = "0.53.2", features = [
    "gossipsub",
    "kad",
    "request-response",
    "tokio",
    "yamux",
    "tcp",
    "dns",
    "noise",
    "macros",
    "identify",
    "mdns"
] }

bincode = "1.3"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "vm_benchmarks"
# harness = false
